# scrapy-sentry-sdk

./: .gitignore  README.md  pyproject.toml
scrapy_sentry_sdk/: extensions.py
