[tool.poetry]
name = "scrapy_sentry_sdk"
version = "0.1.0"
description = "Scrapy extension for integration of Sentry SDK to Scrapy projects"
authors = ["KristobalJunta <junta.kristobal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
sentry-sdk = "^0.14.3"
scrapy = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
