[tool.poetry]
name = "scrapy_sentry_sdk"
version = "0.2.0"
description = "Scrapy extension for integration of Sentry SDK to Scrapy projects"
authors = ["KristobalJunta <junta.kristobal@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/groupbwt/scrapy-sentry-sdk/"
keywords = ["Error reporting", "Monitoring", "Scrapy", "Sentry"]
classifiers = ["Topic :: Software Development :: Libraries :: Python Modules"]

[tool.poetry.dependencies]
python = "^3.6"
sentry-sdk = "^0.14.3"
scrapy = ">=1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
